==> hazzlim/mbed-os/targets/TARGET_RENESAS/TARGET_RZ_A2XX/serial_api.c <==
#include "mbed_assert.h"
#include <math.h>
#include <string.h>
#include <stdlib.h>
#include "serial_api.h"
#include "cmsis.h"
#include "PeripheralPins.h"
#include "gpio_api.h"
#include "RZ_A2_Init.h"
#include "iodefine.h"
#include "mbed_drv_cfg.h"
#include "mbed_critical.h"
#define UART_NUM    5
#define IRQ_NUM     3

void serial_init(serial_t *obj, PinName tx, PinName rx)
{
    volatile uint8_t dummy_buf;
    int is_stdio_uart = 0;
    // determine the UART to use
    uint32_t uart_tx = pinmap_peripheral(tx, PinMap_UART_TX);
    uint32_t uart_rx = pinmap_peripheral(rx, PinMap_UART_RX);
    uint32_t ch_no = pinmap_merge(uart_tx, uart_rx);

#if defined(PRINTF_NOT_USE)
    if ((int)ch_no == NC) {
        obj->serial.ch = ch_no;
        return;
    }
#else
    MBED_ASSERT((int)ch_no != NC);
#endif

    // pinout the chosen uart
    pinmap_pinout(tx, PinMap_UART_TX);
    pinmap_pinout(rx, PinMap_UART_RX);

    obj->serial.ch = ch_no;
    obj->serial.uart = SCIFA[ch_no];

    /* ==== Module standby clear ==== */
    CPG.STBCR4.BYTE &= ~(0x80 >> ch_no);
    dummy_buf = CPG.STBCR4.BYTE;
    (void)dummy_buf;

    /* ==== SCIF initial setting ==== */
    /* --- Serial control register(SCR) setting --- */
    obj->serial.uart->SCR.WORD = 0x0000;   /* SCIFA transmitting and receiving operations stop */

    /* ---- FIFO control register (FCR) setting ---- */
    if ((int)uart_tx != NC) {      /* Use transmit */
        /* Transmit FIFO reset */
        obj->serial.uart->FCR.BIT.TFRST = 0x01;
    }

    if ((int)uart_rx != NC) {      /* Use receive */
        /* Receive FIFO data register reset */
        obj->serial.uart->FCR.BIT.RFRST = 0x1;
    }

    /* ---- Serial status register (FSR) setting ---- */
    obj->serial.uart->FSR.BIT.DR  = 0x0;  /* ER bit clear  */
    obj->serial.uart->FSR.BIT.BRK = 0x0;  /* BRK bit clear */
    obj->serial.uart->FSR.BIT.ER  = 0x0;  /* ER bit clear  */

    /* ---- Line status register (LSR) setting ---- */
    obj->serial.uart->LSR.BIT.ORER = 0x0; /* ORER bit clear */

    /* ---- Serial control register (SCR) setting ---- */
    obj->serial.uart->SCR.BIT.CKE = 0x0;  /* B'00 : Internal CLK */

    serial_baud(obj, 9600);
    serial_format(obj, 8, ParityNone, 1);

    /* ---- Serial extension mode register (SEMR) setting ----
    b7 BGDM - Baud rate generator double-speed mode  : Normal mode
    b0 ABCS - Base clock select in asynchronous mode : Base clock is 16 times the bit rate */

    obj->serial.uart->SEMR.BIT.ABCS0 = 0x0;    /* Base clock select in asynchronous mode : Base clock is 16 times the bit rate */
    obj->serial.uart->SEMR.BIT.NFEN  = 0x1;    /*  Noise Filter : Enable */
    obj->serial.uart->SEMR.BIT.DIR   = 0x0;    /* LSB first */
    obj->serial.uart->SEMR.BIT.MDDRS = 0x0;    /* Select BRR register */
    obj->serial.uart->SEMR.BIT.BRME  = 0x0;    /* Bit Modulation Enable : Disable */
    obj->serial.uart->SEMR.BIT.BGDM  = 0x0;    /* Baud rate generator double-speed mode  : Normal mode*/

    obj->serial.uart->FCR.BIT.LOOP   = 0x0;    /* Loop-back test                    : Disabled      */
    if ((int)uart_rx != NC) {
        obj->serial.uart->FCR.BIT.RFRST = 0x0; /* Receive FIFO data register reset  : Disabled      */
        obj->serial.uart->SCR.BIT.TE    = 0x1; /* transmitting operations is enabled */
    } else {
        obj->serial.uart->FCR.BIT.RFRST = 0x1; /* Receive FIFO data register reset  : Enable        */
    }
    if ((int)uart_tx != NC) {      /* Use transmit */
        obj->serial.uart->FCR.BIT.TFRST = 0x0; /* Transmit FIFO data register reset : Disabled      */
        obj->serial.uart->SCR.BIT.RE    = 0x1; /* receiving operations is enabled */
    } else {
        obj->serial.uart->FCR.BIT.TFRST = 0x1; /* Transmit FIFO data register reset : Enable        */
    }
    obj->serial.uart->FCR.BIT.MCE   = 0x0;     /* Modem control enable              : Disabled      */
    obj->serial.uart->FCR.BIT.TTRG  = 0x3;     /* Transmit FIFO data trigger        : 0-data        */
    obj->serial.uart->FCR.BIT.RTRG  = 0x0;     /* Receive FIFO data trigger         : 1-data        */
    obj->serial.uart->FCR.BIT.RSTRG = 0x0;     /* RTS output active trigger         : Initial value */

    /* ---- Serial port register (SCR, SPTR) setting ---- */
    /* b1 SPB2IO - Serial port break output : Enabled
       b0 SPB2DT - Serial port break data   : High-level */

    obj->serial.uart->SPTR.WORD |= 0x3;   /* b1 SPB2IO - Serial port break output : Enabled    */
    /* b0 SPB2DT - Serial port break data   : High-level */

    if ((int)uart_rx != NC) {
        obj->serial.uart->SCR.BIT.TIE   = 0x1;
        obj->serial.uart->SCR.BIT.TE    = 0x1; /* transmitting operations is enabled */
    }
    if ((int)uart_tx != NC) {      /* Use transmit */
        obj->serial.uart->SCR.BIT.RIE   = 0x1;
        obj->serial.uart->SCR.BIT.RE    = 0x1; /* receiving operations is enabled */
    }

    is_stdio_uart = (ch_no == STDIO_UART) ? (1) : (0);

    if (is_stdio_uart) {
        stdio_uart_inited = 1;
        memcpy(&stdio_uart, obj, sizeof(serial_t));
    }
}

void serial_baud(serial_t *obj, int baudrate)
{
    uint32_t idx;
    uint32_t brr;
    uint32_t mddr;
    uint32_t wk_data = 8;
    float    wk_error;

#if defined(PRINTF_NOT_USE)
    if ((int)obj->serial.ch == NC) {
        return;
    }
#endif

    if (baudrate <= 0) {
        return;
    }

    for (idx = 0; idx <= 4; idx++) {
        /* Calculate Bit Rate */
        brr = CM0_RENESAS_RZ_A2_P1_CLK / (wk_data * baudrate);
        if (brr > 0) {
            /* The maximum baud rate is (CM0_RENESAS_RZ_A2_P1_CLK / 8) */
            /* If the baud rate is more, brr is set to 0 */
            brr -= 1;
        }

        /* When idx is 4 (CKS=3), it allows up to the limit value which can be adjusted with MDDR */
        if ((brr <= 255) || (idx == 4)) {
            if (brr > 255) {
                brr = 255;
            }

            /* Calculate Modulation Duty */
            wk_error = (float)CM0_RENESAS_RZ_A2_P1_CLK / (float)(wk_data * baudrate * (brr + 1));
            mddr = (uint32_t)((256.0f / wk_error) + 0.5f);
            if (mddr < 128) {
                mddr = 128;    /* MDDR >= 128 (Executed only when idx is 4) */
            }

            /* idx= 0: BGDM=1 ABCS0=1 CKS=0 */
            /*      1: BGDM=0 ABCS0=0 CKS=0 */
            /*      2: BGDM=0 ABCS0=0 CKS=1 */
            /*      3: BGDM=1 ABCS0=1 CKS=3 (Do not use CKS=2) */
            /*      4: BGDM=0 ABCS0=0 CKS=3 */
            if ((idx == 0) || (idx == 3)) {
                obj->serial.uart->SEMR.BIT.BGDM  = 0x1;     /* Baud rate generator double-speed mode */
                obj->serial.uart->SEMR.BIT.ABCS0 = 0x1;     /* 8 times the transfer rate as the base clock */
                obj->serial.uart->SMR.BIT.CKS    = idx;     /* Clock Select  0(1/1), 1(1/4), 2(1/16), 3(1/64) */
            } else {
                obj->serial.uart->SEMR.BIT.BGDM  = 0x0;     /* Baud rate generator normal mode */
                obj->serial.uart->SEMR.BIT.ABCS0 = 0x0;     /* 16 times the transfer rate as the base clock */
                obj->serial.uart->SMR.BIT.CKS    = idx - 1; /* Clock Select  0(1/1), 1(1/4), 2(1/16), 3(1/64) */
            }
            obj->serial.uart->SEMR.BIT.MDDRS = 0x0;                   /* Select BRR register */
            obj->serial.uart->BRR_MDDR.BRR.BYTE = (uint8_t)brr;       /* Bit Rate */
            obj->serial.uart->SEMR.BIT.BRME = 0x0;                    /* Bit rate modulation is disabled */
            if (mddr <= 255) {
                obj->serial.uart->SEMR.BIT.MDDRS = 0x1;               /* Select MDDR register */
                obj->serial.uart->BRR_MDDR.MDDR.BYTE = (uint8_t)mddr; /* Modulation Duty */
                obj->serial.uart->SEMR.BIT.BRME = 0x1;                /* Bit rate modulation is enabled */
            }
            break;
        }
        wk_data = (wk_data << 2);
    }
}

void serial_format(serial_t *obj, int data_bits, SerialParity parity, int stop_bits)
{
#if defined(PRINTF_NOT_USE)
    if ((int)obj->serial.ch == NC) {
        return;
    }
#endif

    MBED_ASSERT((stop_bits == 1) || (stop_bits == 2));
    MBED_ASSERT((data_bits == 8) || (data_bits == 7));
    MBED_ASSERT((parity == ParityNone) || (parity == ParityOdd) || (parity == ParityEven) ||
                (parity == ParityForced1) || (parity == ParityForced0));

    if (stop_bits == 1) {
        obj->serial.uart->SMR.BIT.STOP = 0x0;    /* Stop bit length    : 1 stop bit  */
    } else {
        obj->serial.uart->SMR.BIT.STOP = 0x1;    /* Stop bit length    : 2 stop bits */
    }

    switch (parity) {
        case ParityNone:
            obj->serial.uart->SMR.BIT.PE = 0x0;  /* Parity enable : Add and check are disabled */
            obj->serial.uart->SMR.BIT.PM = 0x0;  /* Parity mode : even */
            break;
        case ParityOdd:
            obj->serial.uart->SMR.BIT.PE = 0x1;  /* Parity enable : Add and check are enabled  */
            obj->serial.uart->SMR.BIT.PM = 0x1;  /* Parity mode : odd */
            break;
        case ParityEven:
            obj->serial.uart->SMR.BIT.PE = 0x1;  /* Parity enable : Add and check are enabled  */
            obj->serial.uart->SMR.BIT.PM = 0x0;  /* Parity mode : even */
            break;
        case ParityForced1:
        case ParityForced0:
        default:
            obj->serial.uart->SMR.BIT.PE = 0x0;  /* Parity enable : Add and check are disabled */
            obj->serial.uart->SMR.BIT.PM = 0x0;  /* Parity mode : even */
            break;
    }

    if (data_bits == 8) {
        obj->serial.uart->SMR.BIT.CHR = 0x0;    /* Character length   : 8-bit data  */
    } else {
        obj->serial.uart->SMR.BIT.CHR = 0x1;    /* Character length   : 7-bit data  */
    }
    obj->serial.uart->SMR.BIT.CM = 0x0;         /* Communication mode : Asynchronous mode  */
}

void serial_irq_set(serial_t *obj, SerialIrq irq, uint32_t enable)
{
    IRQn_Type IRQn;
    IRQHandler handler;

    IRQn = irq_set_tbl[obj->serial.ch][irq];
    handler = hander_set_tbl[obj->serial.ch][irq];

    if (obj->serial.ch < UART_NUM) {
        serial_irq_set_irq(IRQn, handler, enable);
    }
}

int serial_getc(serial_t *obj)
{
    int data;

#if defined(PRINTF_NOT_USE)
    if ((int)obj->serial.ch == NC) {
        return 0;
    }
#endif
    /* Confirming receive error(ER,BRK,FER,PER,ORER) */
    if (((obj->serial.uart->FSR.WORD & 0x009Cu) != 0)  ||
            (obj->serial.uart->LSR.BIT.ORER == 1)) {
        /* ---- Detect receive error ---- */
        /* Disable reception             */
        /* Reset receiving FIFO          */
        /* Clearing FIFO reception reset */
        /* Error bit clear               */
        /* Enable reception              */
        obj->serial.uart->SCR.BIT.RE = 0;
        obj->serial.uart->FCR.BIT.RFRST = 1;
        obj->serial.uart->FCR.BIT.RFRST = 0;
        obj->serial.uart->FSR.WORD &= ~0x009Cu;
        obj->serial.uart->LSR.BIT.ORER = 0;
        obj->serial.uart->SCR.BIT.RE = 1;
        return -1;
    }

    /* Is there receive FIFO data? */
    while (obj->serial.uart->FSR.BIT.RDF == 0) {
        /* Wait */
    }

    /* Read receive data */
    data = (int)((obj->serial.uart->FRDR.BYTE) & 0xFFu);
    /* Clear DR,RDF */
    obj->serial.uart->FSR.BIT.RDF = 0;

    return data;
}

void serial_putc(serial_t *obj, int c)
{
#if defined(PRINTF_NOT_USE)
    if ((int)obj->serial.ch == NC) {
        return;
    }
#endif

    /* Check if it is possible to transmit (TDFE flag) */
    while (obj->serial.uart->FSR.BIT.TDFE == 0) {
        /* Wait */
    }

    /* Write the receiving data in TDR */
    obj->serial.uart->FTDR.BYTE = (uint8_t)c;

    /* Clear TDFE and TEND flag */
    obj->serial.uart->FSR.WORD &= ~0x0060u;
}

int serial_readable(serial_t *obj)
{
    if (obj->serial.uart->FSR.BIT.RDF == 0) {
        return 0;
    } else {
        return 1;
    }
}

int serial_writable(serial_t *obj)
{
#if defined(PRINTF_NOT_USE)
    if ((int)obj->serial.ch == NC) {
        return 0;
    }
#endif
    if (obj->serial.uart->FSR.BIT.TDFE == 0) {
        return 0;
    } else {
        return 1;
    }
}

void serial_break_set(serial_t *obj)
{
    core_util_critical_section_enter();
    obj->serial.uart->SCR.BIT.TE = 0;
    core_util_critical_section_exit();
}

void serial_break_clear(serial_t *obj)
{
#if defined(PRINTF_NOT_USE)
    if ((int)obj->serial.ch == NC) {
        return;
    }
#endif
    core_util_critical_section_enter();
    obj->serial.uart->SCR.BIT.TE = 1;
    core_util_critical_section_exit();
}
